--- a/NewProject/css/tecnico.css
+++ b/NewProject/css/tecnico.css
@@ -144,3 +144,18 @@ tr:hover {
 #reporte-mantenimiento button:hover {
     background-color: #0056b3; /* Color de fondo al pasar el mouse */
 }
+
+.open-modal {
+    background-color: orange; /* Color de fondo naranja */
+    color: white; /* Color del texto blanco */
+    border: none; /* Sin borde */
+    padding: 10px 20px; /* Espaciado interno */
+    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    border-radius: 5px; /* Bordes redondeados */
+    font-size: 16px; /* Tamaño de fuente */
+    width: 95%;
+}
+
+.open-modal:hover {
+    background-color: darkorange; /* Color de fondo al pasar el mouse */
+}
